rust/macros/tests/invalid/target/rls/debug/deps/no_comma_rs-de4187d49748cba6.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\no_comma_rs-de4187d49748cba6.rmeta: no-comma.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\no_comma_rs-de4187d49748cba6.d: no-comma.rs

no-comma.rs:
